# token-metadata

./: Cargo.toml  Makefile  README.md
.github/workflows/: dependabot-auto-merge.yml  main.yml  publish-js.yml  publish-rust.yml
clients/js-legacy/: README.md  package.json
clients/js-legacy/src/: errors.ts  field.ts  instruction.ts  state.ts
clients/js-legacy/test/: instruction.test.ts  state.test.ts
interface/: Cargo.toml  README.md
interface/src/: error.rs  instruction.rs  lib.rs  state.rs
program/: Cargo.toml
program/src/: entrypoint.rs  lib.rs  processor.rs
program/tests/: emit.rs  initialize.rs  program_test.rs  remove_key.rs  update_authority.rs  update_field.rs
scripts/: restart-test-validator.sh  spellcheck.toml
